--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,5 +1,10 @@
 .app {
 	--bg-color: #8ee8ea;
+	--inverted-bg-color: #0e0e75;
+
 	--primary-color: #041c65;
 	--secondary-color: #0449e0;
+
+	--inverted-primary-color: #049604;
+	--inverted-secondary-color: #04ff04;
 }
