--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,10 +1,9 @@
 .app.dark {
-	--bg-color: #0e0e75;
-	--inverted-bg-color: #8ee8ea;
+	--bg-color: #090949;
+	--inverted-bg-color: #e8e8ea;
 
 	--primary-color: #049604;
 	--secondary-color: #04ff04;
-
-	--inverted-primary-color: #041c65;
-	--inverted-secondary-color: #0449e0;
+	--inverted-primary-color: #0232c2;
+	--inverted-secondary-color: #0452ff;
 }
