--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,10 +1,9 @@
-.app {
-	--bg-color: #8ee8ea;
-	--inverted-bg-color: #0e0e75;
+:root {
+	--bg-color: #e8e8ea;
+	--inverted-bg-color: #090949;
 
-	--primary-color: #041c65;
+	--primary-color: #0232c2;
 	--secondary-color: #0449e0;
-
 	--inverted-primary-color: #049604;
 	--inverted-secondary-color: #04ff04;
 }
