--- a/src/shared/ui/Button/ui/Button.module.scss
+++ b/src/shared/ui/Button/ui/Button.module.scss
@@ -1,10 +1,10 @@
 .Button {
 	cursor: pointer;
+	color: var(--primary-color);
 }
 
 .clear {
 	padding: 0px;
-	margin: 0px;
 	border: 0px;
 	outline: none;
 	background: none;
