Add eslint, stylelint

--- a/src/shared/ui/Button/ui/Button.module.scss
+++ b/src/shared/ui/Button/ui/Button.module.scss
@@ -1,11 +1,11 @@
 .Button {
-	cursor: pointer;
-	color: var(--primary-color);
+    cursor: pointer;
+    color: var(--primary-color);
 }
 
 .clear {
-	padding: 0px;
-	border: 0px;
-	outline: none;
-	background: none;
+    padding: 0;
+    border: 0;
+    outline: none;
+    background: none;
 }
