--- a/src/shared/ui/Button/ui/Button.module.scss
+++ b/src/shared/ui/Button/ui/Button.module.scss
@@ -9,9 +9,10 @@
     outline: none;
     background: none;
 }
+
 .outline {
     padding: 15px;
     background: none;
     border: 1px solid var(--primary-color);
-    color: var(--primary-color)
+    color: var(--primary-color);
 }
