--- a/src/widgets/Sidebar/ui/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar.module.scss
@@ -6,10 +6,6 @@
     transition: width 0.3s;
 }
 
-.collapsed {
-    width: var(--sidebar-width-collapsed);
-}
-
 .switchers {
     position: absolute;
     bottom: 20px;
@@ -20,4 +16,37 @@
 
 .lang {
     margin-left: 20px;
+}
+
+.items {
+    margin-left: 30px;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.item{
+    padding-top: 30px;
+    margin-right: 10px;
+    display: flex;
+    align-items: center;
+}
+
+.icon{
+    fill: var(--inverted-primary-color);
+}
+
+.link {
+    padding-left: 10px;
+    opacity: 1;
+}
+
+.collapsed {
+    width: var(--sidebar-width-collapsed);
+
+    .link{
+        opacity: 0;
+        transition: 0.2s opacity;
+        width: 0;
+    }
 }
