--- a/src/widgets/Sidebar/ui/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar.module.scss
@@ -44,9 +44,24 @@
 .collapsed {
     width: var(--sidebar-width-collapsed);
 
+    .switchers {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .lang {
+        margin-left: 0;
+    }
+
     .link{
         opacity: 0;
         transition: 0.2s opacity;
         width: 0;
     }
+}
+
+.collapsedBtn {
+    position: absolute;
+    right: -32px;
+    bottom: 32px;
 }
