--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -14,4 +14,10 @@
     --navbar-height: 50px;
     --sidebar-width: 300px;
     --sidebar-width-collapsed: 80px;
+
+    // Z-index
+    --modal-z-index: 10;
+
+    // Modal
+    --overlay-color: rgba(0 0 0 / 60%);
 }
