--- a/src/shared/ui/Button/ui/Button.module.scss
+++ b/src/shared/ui/Button/ui/Button.module.scss
@@ -4,11 +4,16 @@
     padding: 6px 15px;
 }
 
-.clear {
+.clear,
+.clearInverted {
     padding: 0;
     border: 0;
     outline: none;
     background: none;
+}
+
+.clearInverted {
+    color: var(--inverted-primary-color)
 }
 
 .outline {
