--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,7 +1,7 @@
 @import 'reset';
-@import 'variables/global';
-@import 'themes/dark';
-@import 'themes/normal';
+@import './variables/global';
+@import './themes/dark';
+@import './themes/normal';
 
 body {
     font-size: var(--font-m);
