Add userAuth, Text Component, Fixed Storybook

--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -20,4 +20,8 @@
 
     // Modal
     --overlay-color: rgba(0 0 0 / 60%);
+
+    // Error
+    --error-light-color: #ee3b3b;
+    --error-dark-color: #850707;
 }
