--- a/src/shared/ui/Button/ui/Button.module.scss
+++ b/src/shared/ui/Button/ui/Button.module.scss
@@ -17,7 +17,7 @@
 }
 
 .outline {
-    padding: 15px;
+    padding: 5px;
     background: none;
     border: 1px solid var(--primary-color);
     color: var(--primary-color);
@@ -34,6 +34,7 @@
     color: var(--inverted-primary-color);
     border: none;
 }
+
 
 .square {
     padding: 0;
@@ -67,4 +68,8 @@
 
 .size_xl{
     font: var(--font-xl);
+}
+
+.disabled{
+    opacity: 0.5;
 }
